--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* style.css */
+/* style.css
 
 body {
     font-family: Arial, sans-serif;
@@ -23,4 +23,4 @@ body {
 
 .post small {
     color: #999;
-}
+} */
