--- a/Front/assets/homeActu.css
+++ b/Front/assets/homeActu.css
@@ -66,9 +66,28 @@ body {
 .Evenement {
     color: white;
     background-color: #3498db;
-    padding: 60px;
+    padding: 20px; /* Ajustez la valeur du padding selon vos besoins */
     box-sizing: border-box;
-}
+    display: flex;
+    justify-content: space-between; /* Pour aligner les cartes à l'extrémité de la div */
+  }
+  
+  .postE {
+    width: 48%; /* Ajustez la largeur des cartes selon vos besoins */
+    margin-bottom: 20px; /* Espace entre les cartes */
+  }
+  
+  .cardE {
+    max-width: 100%; /* Pour que les cartes n'excèdent pas 100% de leur parent */
+    width: 100%;
+  }
+  
+  .cardE:hover {
+    z-index: 7;
+    transform: scale(1); /* Pour empêcher l'agrandissement au survol */
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.4); /* Ajustez l'ombre selon vos préférences */
+  }
+  
 
 main {
     display: flex;
